<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.baki.hw_cpu.MainActivity">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="388dp"
        android:layout_height="512dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="ScrollViewSize">



                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/model" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/board" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/brand" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/display" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hardware" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fingerprint" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/id" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/host" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/manufacturers" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/user" />


                    </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cpu" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                            android:id="@+id/textView21"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sensors" />

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/x" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/y" />

                    <TextView
                        android:id="@+id/textView24"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/z" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">



                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ram" />

                    <TextView
                        android:id="@+id/textView32"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_ram" />

                    <TextView
                        android:id="@+id/textView33"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/free_ram" />



                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>
</ScrollView>
